feat: Adiciona a classe VeiculoSpecs para especificações de veículo - Adição de filtros para a lista paginada para ano e combustivel - Organização do código